tests/spec/emit/snapshots/get_with_a_constant_index_go_rejects_keeps_the_helper.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn past_the_end(xs: Array<int, 2>) -> int {
    match xs.get(2) {
      Some(v) => v,
      None => -1,
    }
  }
  
  fn negative(xs: Slice<int>) -> int {
    match xs.get(-1) {
      Some(v) => v,
      None => -1,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func pastTheEnd(xs [2]int) int {
	subject := lisette.SliceGet(xs[:], 2)
	if subject.Tag == lisette.OptionSome {
		return subject.SomeVal
	}
	return -1
}

func negative(xs []int) int {
	subject := lisette.SliceGet(xs, -1)
	if subject.Tag == lisette.OptionSome {
		return subject.SomeVal
	}
	return -1
}
