tests/spec/emit/snapshots/go_anon_struct_annotation_renders_structurally.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import anon "go:example.com/anon"
  
  fn annotated() -> int {
    let x: anon.AnonX = anon.PlainReturn()
    x.X
  }
---
package main

import "example.com/anon"

func annotated() int {
	x := anon.PlainReturn()
	return x.X
}
