tests/spec/emit/snapshots/go_anon_struct_construction_renders_structurally.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import anon "go:example.com/anon"
  
  fn build() {
    anon.TakesAnon(anon.AnonX { X: 1 })
  }
---
package main

import "example.com/anon"

func build() {
	anon.TakesAnon(struct{ X int }{X: 1})
}
