tests/spec/emit/snapshots/go_anon_struct_read_renders_structurally.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import anon "go:example.com/anon"
  
  fn read() -> int {
    let r = anon.PlainReturn()
    r.X
  }
---
package main

import "example.com/anon"

func read() int {
	r := anon.PlainReturn()
	return r.X
}
