tests/spec/emit/snapshots/go_anon_struct_zero_value_renders_structurally.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import anon "go:example.com/anon"
  
  fn fill() {
    anon.TakesAnon(anon.AnonX { .. })
  }
---
package main

import "example.com/anon"

func fill() {
	anon.TakesAnon(struct{ X int }{})
}
