tests/spec/emit/snapshots/go_array_return_temp_var_no_collision.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:crypto/sha256"
  
  fn main() {
    let data = "hello" as Slice<uint8>
    let hash = sha256.Sum256(data)
    let arr_1 = 7
    let _ = hash
    let _ = arr_1
  }
---
package main

import "crypto/sha256"

func main() {
	data := []uint8("hello")
	arr_1 := sha256.Sum256(data)
	hash := arr_1[:]
	arr_1_2 := 7
	_ = hash
	_ = arr_1_2
}
