tests/spec/emit/snapshots/go_call_result_as_tail_expression.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  fn print_hello() -> Result<int, error> {
    fmt.Println("hello")
  }
---
package main

import "fmt"

func printHello() (int, error) {
	return fmt.Println("hello")
}
