tests/spec/emit/snapshots/go_callback_bound_to_aliased_fn_type.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:path/filepath"
  import "go:io/fs"
  
  fn main() {
    let walker: filepath.WalkFunc = |_path: string, _info: fs.FileInfo, _err: error| -> Result<(), error> {
      Ok(())
    }
    let _ = filepath.Walk("/tmp", walker)
  }
---
package main

import (
	"io/fs"
	"path/filepath"
)

func main() {
	var walker filepath.WalkFunc = func(_ string, _ fs.FileInfo, _ error) error {
		return nil
	}
	filepath.Walk("/tmp", walker)
}
