tests/spec/emit/snapshots/go_callback_result_adaptation.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:flag"
  
  fn main() {
    flag.Func("verbose", "enable verbose", |_val: string| -> Result<(), error> {
      Ok(())
    })
  }
---
package main

import "flag"

func main() {
	flag.Func("verbose", "enable verbose", func(_ string) error {
		return nil
	})
}
